--- a/ejercicio/public/index.html
+++ b/ejercicio/public/index.html
@@ -18,7 +18,11 @@
   <div id="header"></div>
   <div id="padre">
     <div id="list"></div>
-    <div id="content"></div>
+    <div id="content">
+      <div id="titulo"></div>
+      <div id="texto"></div>
+      <div id="imagen"></div>
+    </div>
   </div>
 </body>
 
